<resources>
    <string name="load_computer_kotlin">Load Computer Kotlin</string>
    <string name="load_computer_java">Load Computer Java</string>
    <string name="check_language">Please check language</string>
    <string name="add_to_observable">Add to Observable</string>
    <string name="title_activity_proxy">ProxyActivity</string>
    <string name="restore_text">Restore State</string>
    <string name="write_text">Write Text</string>
    <string name="save_text">Save State</string>
    <string name="composite">Composite</string>
    <string name="decorator">Decorator</string>
    <string name="flyweight">FlyWeight</string>
    <string name="app_name">Patterns</string>
    <string name="receiver">Receiver</string>
    <string name="observer">Observer</string>
    <string name="decorate">Decorate</string>
    <string name="strategy">Strategy</string>
    <string name="mediator">Mediator</string>
    <string name="command">Command</string>
    <string name="adapter">Adapter</string>
    <string name="momento">Memento</string>
    <string name="invoker">Invoker</string>
    <string name="visitor">Visitor</string>
    <string name="bridge">Bridge</string>
    <string name="kotlin">Kotlin</string>
    <string name="facade">Facade</string>
    <string name="green">Green</string>
    <string name="hello">Hello</string>
    <string name="state">State</string>
    <string name="crypt">Crypt</string>
    <string name="proxy">Proxy</string>
    <string name="java">Java</string>
    <string name="undo">Undo</string>
    <string name="send">Send</string>
    <string name="buy">Buy</string>
    <string name="red">Red</string>
    <string name="square_brackets">square brackets [ ]</string>
    <string name="round_brackets">round brackets ( )</string>
    <string name="braces">braces { }</string>
    <string name="visit"><![CDATA[visit ->]]></string>
    <string name="next"><![CDATA[->]]></string>
</resources>
