<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btFlyWeight"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/flyweight"/>

        <Button
            android:id="@+id/btProxy"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/proxy"/>

        <Button
            android:id="@+id/btFacade"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/facade"/>

        <Button
            android:id="@+id/btDecorator"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/decorator"/>

        <Button
            android:id="@+id/btComposite"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/composite"/>

        <Button
            android:id="@+id/btVisitor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/visitor"/>

        <Button
            android:id="@+id/btMediator"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/mediator"/>

        <Button
            android:id="@+id/btStrategy"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/strategy"/>

        <Button
            android:id="@+id/btState"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/state"/>

        <Button
            android:id="@+id/btCommand"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/command"/>

        <Button
            android:id="@+id/btObserver"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/observer"/>

        <Button
            android:id="@+id/btBridge"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/bridge"/>

        <Button
            android:id="@+id/btAdapter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/adapter"/>

        <Button
            android:id="@+id/btMomento"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/momento"/>

    </LinearLayout>
</ScrollView>