<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".decorator.DecoratorActivity">

    <include layout="@layout/rg_java_kotlin"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="104dp"
        android:hint="@string/write_text"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/cbRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_brackets"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"/>

    <CheckBox
        android:id="@+id/cbSquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/square_brackets"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRound"/>

    <CheckBox
        android:id="@+id/cbBraces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/braces"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSquare"/>

    <Button
        android:id="@+id/btDecorate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decorate"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="result"
        android:layout_margin="32dp"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>