<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mediator.MediatorActivity">

    <TextView
        android:id="@+id/tvKotlin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kotlin"
        app:layout_constraintBottom_toBottomOf="@+id/btFirstKotlin"
        app:layout_constraintEnd_toStartOf="@id/btFirstKotlin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btFirstKotlin"/>

    <Button
        android:id="@+id/btFirstKotlin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/visit"
        app:layout_constraintEnd_toStartOf="@id/btSecondKotlin"
        app:layout_constraintStart_toEndOf="@id/tvKotlin"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btSecondKotlin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btFirstKotlin"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvJava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java"
        app:layout_constraintBottom_toBottomOf="@+id/btFirstJava"
        app:layout_constraintEnd_toStartOf="@id/btFirstJava"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btFirstJava"/>

    <Button
        android:id="@+id/btFirstJava"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:text="@string/visit"
        app:layout_constraintEnd_toStartOf="@id/btSecondJava"
        app:layout_constraintStart_toEndOf="@id/tvJava"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btSecondJava"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btFirstJava"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>